[gd_scene load_steps=3 format=3 uid="uid://b02ofqs5gyvt3"]

[ext_resource type="Script" uid="uid://b3q5t5ih8agjt" path="res://user_interface/screens/LevelScreen.gd" id="1_5s4jb"]
[ext_resource type="Theme" uid="uid://d2mah8qfufk0b" path="res://user_interface/assets/UIMenuTheme.tres" id="1_alm15"]

[node name="LevelScreen" type="VBoxContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -372.0
offset_right = 372.0
offset_bottom = 374.0
grow_horizontal = 2
script = ExtResource("1_5s4jb")

[node name="TitleLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme = ExtResource("1_alm15")
text = "Tales of Mouseketeer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LEVEL_ACTIONS" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="Level1Button" type="Button" parent="LEVEL_ACTIONS"]
layout_mode = 2
theme = ExtResource("1_alm15")
text = "LEVEL 1"

[node name="Level2Button" type="Button" parent="LEVEL_ACTIONS"]
layout_mode = 2
theme = ExtResource("1_alm15")
text = "LEVEL 2"

[node name="BackButton" type="Button" parent="LEVEL_ACTIONS"]
layout_mode = 2
theme = ExtResource("1_alm15")
text = "BACK"

[node name="Level2BButton" type="Button" parent="LEVEL_ACTIONS"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_alm15")
text = "TEST 2B"

[node name="DebugButton" type="Button" parent="LEVEL_ACTIONS"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_alm15")
text = "TEST LVL"

[connection signal="pressed" from="LEVEL_ACTIONS/Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="LEVEL_ACTIONS/Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="LEVEL_ACTIONS/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="LEVEL_ACTIONS/Level2BButton" to="." method="_on_level_2b_button_pressed"]
[connection signal="pressed" from="LEVEL_ACTIONS/DebugButton" to="." method="_on_debug_button_pressed"]
